--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,3 +8,9 @@ Style/Documentation:
 
 Style/ClassAndModuleChildren:
   Enabled: false
+
+Metrics/MethodLength:
+  Max: 7
+  Exclude:
+    - "bin/bundle"
+    - "db/migrate/*"
